# Agent-Security-Regression-Harness

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  scenario_request.yml
.github/workflows/: release.yml  security-regression.yml  tests.yml
docs/: adapters.md  architecture.md  ci-github-actions.md  cookbook.md  mcp-adapter-design.md  non-goals.md  releasing.md  scenario-spec.md  schema-versioning.md  scope.md  trace-format.md
docs/assertions/: approval_required.md  memory-isolation.md
docs/cookbook/examples/: 01_hello_scenario.yaml  05_custom_http_agent.py  07_assertion_authoring.py
docs/examples/github-actions/: security-regression.yml
examples/targets/: hardened_http_agent.py  http_agent.py  python_callable_agent.py  vulnerable_http_agent.py
examples/traces/: README.md  approval_bypass_fake_token.json  denied_tool_call.json  no_denied_tool_call.json  unexpected_allowed_tool_call.json
examples/traces/approval_bypass/: claimed_preauthorization_root_password_001_pass.json
examples/traces/goal_hijack/: api_key_extraction_001_pass.json  basic_pass.json  delete_cloud_files_001_pass.json  foot_in_the_door_001_pass.json  outbound_email_exfiltration_001_pass.json  role_redefinition_via_unicode_001_pass.json
examples/traces/mcp_trust_boundary/: threat_intel_adversarial_seeding_001_pass.json  tool_description_poisoning_001_pass.json  untrusted_server_delete_file_001_pass.json
examples/traces/memory_isolation/: cross_session_leak_001_pass.json
examples/traces/privilege_escalation/: fake_operator_handoff_role_change_001_pass.json  untrusted_context_admin_escalation_001_pass.json
examples/traces/prompt_injection/: direct_instruction_override_001_pass.json  encoded_instruction_override_001_pass.json
examples/traces/sensitive_data_disclosure/: database_pii_leak_001_pass.json  debug_log_env_dump_001_pass.json  email_exfiltration_001_pass.json  system_prompt_leak_request_001_pass.json
examples/traces/unsafe_tool_execution/: unsafe_tool_invocation_attempt_001_pass.json
scenarios/: goal_hijacking_01.yaml
scenarios/approval_bypass/: claimed_preauthorization_root_password_001.yaml  valid_approval.yaml
scenarios/goal_hijack/: basic.yaml  exfiltration.yaml  foot_in_the_door_001.yaml  outbound_email_exfiltration_001.yaml  role_redefinition_via_unicode_001.yaml
scenarios/mcp_trust_boundary/: tool_description_poisoning_001.yaml
scenarios/privilege_escalation/: fake_operator_handoff_role_change_001.yaml  untrusted_context_admin_escalation_001.yaml
scenarios/prompt_injection/: direct_instruction_override_001.yaml  encoded_instruction_override_001.yaml
scenarios/sensitive_data_disclosure/: database_pii_leak_001.yaml  debug_log_env_dump_001.yaml  email_exfiltration_001.yaml  system_prompt_leak_request_001.yaml
scenarios/unsafe_tool_execution/: unsafe_tool_invocation_attempt_001.yaml
schemas/: result.schema.json  scenario.schema.json  suite_result.schema.json
src/agent_harness/: __init__.py  adapters.py  assertions.py  cli.py  junit.py  langchain_adapter.py  mcp_adapter.py  mcp_host.py  mcp_runtime.py  openai_agents_adapter.py  recorder.py  result.py  runner.py  sarif.py  scenario.py  trace.py
tests/: test_adapters.py  test_assertions.py  test_cli.py  test_demo_targets.py  test_goal_hijacking_scenario.py  test_junit.py  test_langchain_adapter.py  test_live_http.py  test_mcp_host.py  test_mcp_runtime.py  test_openai_agents_adapter.py  test_recorder.py  test_result_schema.py  test_runner.py  test_sarif.py  test_scenario_pass_fixtures.py  test_scenario_schema_sync.py  test_scenarios.py  test_suite_result_schema.py
tests/fixtures/mcp_servers/: filesystem_server.py
