[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "owasp-agent-security-regression-harness"
version = "0.1.0"
description = "OWASP harness for executable security regression testing of agentic applications and MCP-integrated systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Mert Satilmaz", email = "mert.satilmaz@owasp.org" }
]
keywords = [
  "owasp",
  "agent-security",
  "ai-security",
  "llm-security",
  "mcp",
  "security-testing",
  "regression-testing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Testing"
]
dependencies = ["PyYAML>=6.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=7", "ruff>=0.6", "mypy>=1.10", "types-PyYAML", "jsonschema>=4"]
openai-agents = ["openai-agents"]
langchain = ["langchain", "langgraph"]
mcp = ["mcp>=1.12.4,<2"]
adapters = ["openai-agents", "langchain", "langgraph", "mcp>=1.12.4,<2"]

[project.urls]
Homepage = "https://github.com/OWASP/Agent-Security-Regression-Harness"
Repository = "https://github.com/OWASP/Agent-Security-Regression-Harness"
Issues = "https://github.com/OWASP/Agent-Security-Regression-Harness/issues"

[project.scripts]
agent-harness = "agent_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_harness = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "B",  # flake8-bugbear
]

[tool.mypy]
python_version = "3.11"
files = ["src/agent_harness"]
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["src/agent_harness"]
omit = [
    "examples/*",
    "src/agent_harness/*_adapter.py",
    "src/agent_harness/mcp_*.py",
]

[[tool.mypy.overrides]]
# Optional adapter SDKs are imported lazily; missing stubs are expected.
module = [
  "agent_harness.langchain_adapter",
  "agent_harness.mcp_adapter",
  "agent_harness.mcp_host",
  "agent_harness.mcp_runtime",
  "agent_harness.openai_agents_adapter",
]
ignore_missing_imports = true

